ci: Fix GitHub token usage

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,8 +29,8 @@ jobs:
           version: latest
           args: release --clean
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # The automatically-creeated token wont work for updating the tap since the tap lives in
-          # another repository. A separate key will need to be stored in the actions secrets that
-          # has repo: write permissions to the tap repo.
-          TAP_GITHUB_TOKEN: ${{ secrets.TAP_GITHUB_TOKEN }}
+          # The automatically-created token wont work for updating the tap since the tap lives in
+          # another repository and the auto-generated token only gives access to this repository. A
+          # separate token is needed that was content write permissions to this repo and the tap
+          # repository.
+          GITHUB_TOKEN: ${{ secrets.GORELEASER_TOKEN }}
